--- a/package.json
+++ b/package.json
@@ -31,10 +31,12 @@
     "prom-client": "^15.1.3",
     "rxjs": "^7.8.2",
     "speaker": "^0.5.5",
+    "wav": "^1.0.2",
     "ws": "^8.18.3",
     "zod": "^3.25.67"
   },
   "devDependencies": {
+    "@types/wav": "^1.0.4",
     "nodemon": "^3.1.10",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
